<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="gameResult"
            type="com.zhytel.composition.domain.entity.GameResult" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".presentation.GameFinishedFragment">

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="48dp"
        android:contentDescription="@string/tx_game_over"
        android:src="@drawable/ic_qubodup_cubikopp_smilies_1"
        app:emojiResult="@{gameResult.winner}"
        app:layout_constraintBottom_toTopOf="@+id/tv_required_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_score_answers"
        tools:text="@string/number_of_responses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}" />

    <TextView
        android:id="@+id/tv_score_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:scoreAnswers="@{gameResult.countOfRightAnswers}"
        tools:text="@string/tx_your_account"
        android:textSize="18sp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_required_percentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_answers" />

    <TextView
        android:id="@+id/tv_required_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:requiredPercentage="@{gameResult.gameSettings.minPercentOfRightAnswers}"
        tools:text="@string/required_percentage_of_correct_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_store_percentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score_answers"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_store_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:storePercentage="@{gameResult}"
        tools:text="@string/tx_percentage_of_correct_answers"
        android:textSize="18sp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"/>

    <Button
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_try_again"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>